fix: spacing issues

--- a/css/things.css
+++ b/css/things.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: flex-end;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .thing-title {
@@ -32,7 +32,6 @@
 .things-post {
   margin: 0;
   display: flex;
-  gap: 0.7rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
